--- a/用户部署开发环境.md
+++ b/用户部署开发环境.md
@@ -13,11 +13,12 @@ mkdir ~/.local/include
 ## 写入环境变量
 
 ```bash
-echo "export PATH=~/.local/bin:PATH" > ~/.bashrc
-echo "export C_INCLUDE_PATH=~/.local/include:C_INCLUDE_PATH" > ~/.bashrc
-echo "export CPLUS_INCLUDE_PATH=~/.local/include:CPLUS_INCLUDE_PATH" > ~/.bashrc
-echo "export LIBRARY_PATH=~/.local/lib:/usr/lib64:/usr/local/lib:LIBRARY_PATH" > ~/.bashrc
-echo "export LD_LIBRARY_PATH=~/.local/lib:/usr/lib64:/usr/local/lib:LD_LIBRARY_PATH" > ~/.bashrc
+echo "export PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:${HOME}/bin" >> ~/.bashrc
+echo "export PATH=~/.local/bin:$PATH" >> ~/.bashrc
+echo "export C_INCLUDE_PATH=~/.local/include:$C_INCLUDE_PATH" >> ~/.bashrc
+echo "export CPLUS_INCLUDE_PATH=~/.local/include:$CPLUS_INCLUDE_PATH" >> ~/.bashrc
+echo "export LIBRARY_PATH=~/.local/lib:/usr/lib64:/usr/local/lib:$LIBRARY_PATH" >> ~/.bashrc
+echo "export LD_LIBRARY_PATH=~/.local/lib:/usr/lib64:/usr/local/lib:$LD_LIBRARY_PATH" >> ~/.bashrc
 source ~/.bashrc
 ```
 
