--- a/静态库和动态库.md
+++ b/静态库和动态库.md
@@ -34,5 +34,5 @@ linux|*.a|*.so
 * 一种方式使用gcc命令显式指出，一般对本工程的动态库使用
 * 一种是在`/etc/ld.so.conf`中，填写动态库所在路径，一个路径一行，一般对第三方的动态库使用。在修改`/etc/ld.so.conf`或者在默认路径中增加动态库时，需要使用命令`ldconfig `生效，ldconfig会把`/etc/ld.so.conf`的内容拷贝到缓存`/etc/ld.so.cache`中。
 * 通过`export LD_LIBRARY_PATH=your_so_path`
-·，修改环境变量`LD_LIBRARY_PATH`，增加动态库路径，但是只对本次shell有效。可以把命令写入`~/bashrc`或者`/etc/bashrc`文件，前者针对本用户的shell开始前加载运行，后者针对所有人的shell开始前加载运行。
+·，修改环境变量`LD_LIBRARY_PATH`，增加动态库路径，但是只对本次shell有效。可以把命令写入`~/bashrc`或者`/etc/bashrc`文件，前者针对本用户的shell开始前加载运行，后者针对所有人的shell开始前加载运行。但是，有不少声音主张要避免使用 LD_LIBRARY_PATH 变量，尤其是作为全局变量。见http://xahlee.info/UnixResource_dir/_/ldpath.html
 * 一种是直接拷贝库文件到默认查找路径下，这样会破坏原动态库的结构，不建议使用。
