--- a/用户部署开发环境.md
+++ b/用户部署开发环境.md
@@ -22,4 +22,8 @@ echo "export LD_LIBRARY_PATH=~/.local/lib:/usr/lib64:/usr/local/lib:$LD_LIBRARY_
 source ~/.bashrc
 ```
 
-其中`LIBRARY_PATH`是程序编译时寻找库的路径，`LD_LIBRARY_PATH`是程序运行时寻找库的路径，然后把库文件、头文件运行程序安装对应目录即可
+其中:
+
+`C_INCLUDE_PATH`(for C header files)和`CPLUS_INCLUDE_PATH`(for C++ header files)的环境变量是指明头文件的搜索路径，此两个环境变量指明的头文件会在-I指定路径之后，系统默认路径之前进行搜索。
+
+`LIBRARY_PATH`指明库搜索路径，此环境变量指明路径会在-L指定路径之后，系统默认路径之前被搜索。
