--- a/锁.md
+++ b/锁.md
@@ -1,1 +1,20 @@
 
+## 乐观锁和悲观锁
+
+这两种锁都是对数据库而言的，数据库的提交由“增、删、改、查”四种基本操作构成。乐观锁和悲观锁的加锁开始时间不同，而他们都是在commit或者rollback指令后结束。
+
+## 悲观锁
+
+悲观锁认为对数据做任何操作时数据都可能被修改，所以一开始就加上排它锁。是该资源只能由当前客户访问，其他客户会被阻塞。
+
+在并发写较多的场景，建议使用悲观锁，但是加锁需要成本，会减少并发量。
+
+## 乐观锁
+
+乐观锁认为并发量不高，因此并不会加排它锁，只在更新数据时检查下数据是否发生过修改，可以使用版本号机制和CAS算法实现。
+
+注意，乐观锁不能解决脏读的问题。因为没有加锁，所以当前客户无法判断该资源是否被其他客户使用且正在修改。
+
+但乐观锁可以解决并发修改。当多个客户同时修改资源，只有一个客户修改成功，而其他客户(发现版本号不一致)修改失败并进行重试。
+
+在并发写较少的场景，建议使用乐观锁，可以提高都的并发量。
